# become-human

./: .env.example  .gitignore  README.md  app.py  install_deno_windows.ps1  main.py  pyproject.toml
become_human/: __init__.py  agent_manager.py  character.py  config.py  event.py  graph_base.py  graph_main.py  graph_recycle.py  graph_retrieve.py  heartbeat.py  manager.py  memory.py  message.py  plugin.py  presence.py  recycling.py  scheduler.py  store.py  store_manager.py  store_schedules.py  store_settings.py  store_states.py  store_timers.py  time.py  times.py  tool.py  types_main.py  utils.py
become_human/graphs/: base.py  main.py
become_human/memory/: __init__.py  base.py  message.py  plugin.py  recycling.py  store.py  tools.py  types.py
become_human/plugins/: __init__.py  agent_reminder.py  agent_schedule.py  agent_time_incrementer.py  instruction.py  memory.py  note.py  presence.py  reminder.py  subjective_duration_ccumulator.py  time_incrementer.py
become_human/plugins/memory/: __init__.py  base.py  message.py  plugin.py  recycling.py  store.py  tools.py
become_human/store/: base.py  manager.py  schedules.py  settings.py  states.py
become_human/tools/: __init__.py  add_self_call.py  record_thoughts.py  retrieve_memories.py  send_message.py  web_search.py
become_human/types/: agent_manager.py  main.py  manager.py
experiments/: memory_curves.ipynb  time.ipynb
tests/: test_time.py  test_times.py
