[project]
name = "become-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.0.13",
    "dashscope>=1.23.2",
    "fastapi>=0.115.9",
    "jieba>=0.42.1",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "langchain-qwq>=0.1.6",
    "langchain-sandbox>=0.0.6",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.37",
    "pyjwt>=2.10.1",
    "tomlkit>=0.13.3",
    "trustcall>=0.0.39",
    "uvicorn>=0.34.2",
]
