[project]
name = "become-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "jieba>=0.42.1",
    "sprited",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]

[tool.uv.sources]
sprited = { git = "https://github.com/Bartzh/sprited.git" }
