[project]
name = "become-human"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "jieba>=0.42.1",
    "sprited",
]

[project.optional-dependencies]
dev = [
    "sprited[dev]"
]

[tool.uv.sources]
sprited = { git = "https://github.com/Bartzh/sprited.git" }
